--- a/package.json
+++ b/package.json
@@ -1,28 +1,29 @@
 {
-  "name": "pvzvgn",
-  "version": "0.0.0",
-  "description": null,
-  "main": "index.js",
+  "name": "test-react-app",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "formik": "latest",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-scripts": "3.4.1",
-    "yup": "0.29.1"
-  },
-  "prettier": {
-    "trailingComma": "es5",
-    "singleQuote": true,
-    "semi": true
-  },
-  "keywords": [],
-  "devDependencies": {
-    "react-scripts": "1.0.0"
+    "formik": "^2.2.5",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-scripts": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
